# CodeHarness

./: .gitignore  README.md  code_harness.py  env.example  pyproject.toml  vercel.json
.github/workflows/: ci.yml
Workspace/: __init__.py  account.py
Workspace/tests/: __init__.py  test_account.py
docs/: AGENTS.md  ARCHITECTURE.md  DEVELOPMENT.md  SAFETY.md  USAGE.md  index.html  interactive_notes.html  vercel.json
docs_site/: index.html  interactive_notes.html
src/codeharness/: __init__.py
src/codeharness/core/: github_harness.py
src/codeharness/ui/: app.py
tests/: test_smoke.py
